Address review comments from @onoddil
(cherry picked from commit 01b488feed6f6fae3309a5d9af165eb4a871af3e)

--- a/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
+++ b/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
@@ -21,7 +21,7 @@
     "##### What is background estimation?\n",
     "In order to most accurately do photometric analysis of celestial sources in image data, it is important to estimate and subtract the image background. Any astronomical image will have background noise, due to both detector effects and background emission from the night sky. This noise can be modeled as uniform, or as varying with position on the detector. \n",
     "\n",
-    "The `photutils` package provides tools for estimating 2-dimensional background noise, which can then be subtracted from an image to ensure the most accurate photometry possible.\n",
+    "The `photutils` package provides tools for estimating 2-dimensional background flux, which can then be subtracted from an image to ensure the most accurate photometry possible.\n",
     "\n",
     "##### What does this tutorial include?\n",
     "This tutorial covers the basics of background estimation and subtraction, including the following methods:\n",
@@ -163,7 +163,7 @@
    "source": [
     "#### Data representation\n",
     "\n",
-    "Throughout this notebook, we are going to store our images in Python using a `CCDData` object (see [Astropy documentation](http://docs.astropy.org/en/stable/nddata/index.html#ccddata-class-for-images)), which contains a `numpy` array in addition to metadata such as uncertainty, masks, or units. In this case, our data is in electrons (counts) per second."
+    "Throughout this notebook, we are going to store our images in Python using a `CCDData` object (see [Astropy documentation](http://docs.astropy.org/en/stable/nddata/index.html#ccddata-class-for-images)), which contains a `numpy` array in addition to metadata such as uncertainty, masks, or units. In this case, each image has units electrons (counts) per second."
    ]
   },
   {
@@ -291,7 +291,7 @@
    "source": [
     "On the left we have plotted this mask, which has a value of 1 (or True) shown in black where the data is bad, and 0 (or False) shown in white where the data is good. \n",
     "\n",
-    "After the mask is applied to the data - on the right above - the data values \"behind\" the masked values are shown in white."
+    "After the mask is applied to the data (on the right above) the data values \"behind\" the masked values are shown in white."
    ]
   },
   {
@@ -311,7 +311,7 @@
     "\n",
     "### Calculate scalar background value\n",
     "\n",
-    "Here we will calculate the mean, median, and mode using sigma clipping. With sigma clipping, the data is iteratively clipped to exclude data points outside of a certain sigma (standard deviation), thus removing some of the noise from the data before determining statistical values."
+    "Here we will calculate the mean, median, and mode of the dataset using sigma clipping. With sigma clipping, the data is iteratively clipped to exclude data points outside of a certain sigma (standard deviation), thus removing some of the noise from the data before determining statistical values."
    ]
   },
   {
@@ -349,7 +349,7 @@
     "ax2.hist(xdf_image[~xdf_image.mask], bins=100, range=flux_range)\n",
     "\n",
     "# Plot lines for each kind of mean\n",
-    "ax1.axvline(mean, label='Masked & Clipped', c='C1', ls='-.', lw=3)\n",
+    "ax1.axvline(mean, label='Masked and Clipped', c='C1', ls='-.', lw=3)\n",
     "ax1.axvline(np.average(xdf_image[~xdf_image.mask]), label='Masked', c='C2', lw=3)\n",
     "ax1.axvline(stats_nomask[0], label='Clipped', c='C3', ls=':', lw=3)\n",
     "ax1.axvline(np.average(xdf_image), label='Neither', c='C5', ls='--', lw=3)\n",
@@ -361,7 +361,7 @@
     "\n",
     "# Plot lines for each kind of median\n",
     "# Note: use np.ma.median rather than np.median for masked arrays\n",
-    "ax2.axvline(median, label='Masked & Clipped', c='C1', ls='-.', lw=3)\n",
+    "ax2.axvline(median, label='Masked and Clipped', c='C1', ls='-.', lw=3)\n",
     "ax2.axvline(np.ma.median(xdf_image[~xdf_image.mask]), label='Masked', c='C2', lw=3)\n",
     "ax2.axvline(stats_nomask[1], label='Clipped', c='C3', ls=':', lw=3)\n",
     "ax2.axvline(np.ma.median(xdf_image), label='Neither', c='C5', ls='--', lw=3)\n",
@@ -430,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that both plots above use the same normalization scheme, represented by the colorbar at right. That is to say, if two pixels have the same color in both arrays, they have the same value.\n",
+    "Note that both plots above use the same normalization scheme, represented by the colorbar on the right. That is to say, if two pixels have the same color in both arrays, they have the same value.\n",
     "\n",
     "That looks better! You can tell that the background is darker, especially in the top corner. However, the background still does not seem to be completely removed. In this case, the background varies spatially; it is two-dimensional. Thankfully, `photutils` includes functions to remove background like this."
    ]
@@ -462,11 +462,11 @@
    "metadata": {},
    "source": [
     "The `Background2D` class allows users to model 2-dimensional backgrounds, by calculating the mean or median in small boxes, and smoothing these boxes to reconstruct a continuous 2D background. The class includes the following arguments/attributes:\n",
-    "* **`box_size`** - the size of the boxes used to calculate the background. This should be larger than individual sources, yet still small enough to encompass changes in the background.\n",
-    "* **`filter_size`** - the size of the median filter used to smooth the final 2D background.\n",
-    "* **`filter_threshold`** - threshold below which the smoothing median filter will not be applied.\n",
-    "* **`sigma_clip`** - an ` astropy.stats.SigmaClip` object that is used to specify the sigma and number of iterations used to sigma-clip the data before background calculations are performed.\n",
-    "* **`bkg_estimator`** - the method used to perform the background calculation in each box (mean, median, SExtractor algorithm, etc.).\n",
+    "* **`box_size`** &mdash; the size of the boxes used to calculate the background. This should be larger than individual sources, yet still small enough to encompass changes in the background.\n",
+    "* **`filter_size`** &mdash; the size of the median filter used to smooth the final 2D background.\n",
+    "* **`filter_threshold`** &mdash; threshold below which the smoothing median filter will not be applied.\n",
+    "* **`sigma_clip`** &mdash; an ` astropy.stats.SigmaClip` object that is used to specify the sigma and number of iterations used to sigma-clip the data before background calculations are performed.\n",
+    "* **`bkg_estimator`** &mdash; the method used to perform the background calculation in each box (mean, median, SExtractor algorithm, etc.).\n",
     "\n",
     "For this example, we will use the `MeanBackground` estimator."
    ]
@@ -486,7 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sigma_clip = SigmaClip(sigma=3., iters=5)\n",
+    "sigma_clip = SigmaClip(sigma=3., maxiters=5)\n",
     "bkg_estimator = MeanBackground()\n",
     "bkg = Background2D(xdf_image, box_size=200, filter_size=(10, 10), mask=xdf_image.mask,\n",
     "                   sigma_clip=sigma_clip, bkg_estimator=bkg_estimator)"
@@ -664,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
