--- a/notebooks/photutils/02_source_detection/02_source_detection.ipynb
+++ b/notebooks/photutils/02_source_detection/02_source_detection.ipynb
@@ -444,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You might have noticed that the `IRAFStarFinder` algorithm only found 211 sources in our data - 14% of what `DAOStarFinder` found. Why is this?\n",
+    "You might have noticed that the `IRAFStarFinder` algorithm only found 211 sources in our data &ndash; 14% of what `DAOStarFinder` found. Why is this?\n",
     "\n",
     "The answer comes down to the default settings for the two algorithms: (1) there are differences in the upper and lower bounds on the requirements for source roundness and sharpness, and (2) `IRAFStarFinder` includes a minimum separation between sources that `DAOStarFinder` does not have:\n",
     "\n",
@@ -479,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The number of detected sources are in much better agreement now - 1415 versus 1470 - but the improved agreement can also be seen by plotting the location of these sources:"
+    "The number of detected sources are in much better agreement now &ndash; 1415 versus 1470 &ndash; but the improved agreement can also be seen by plotting the location of these sources:"
    ]
   },
   {
@@ -651,7 +651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, how many of these sources match? We can answer this question by using [sets](https://docs.python.org/3/library/stdtypes.html#set-types-set-frozenset) to compare the centroids of the different sources (rounding to the first decimal place)."
+    "Next, how many of these sources match? We can answer this question by using [sets](https://docs.python.org/3/library/stdtypes.html#set-types-set-frozenset) to compare the centroids of the different sources (rounding to the nearest integer)."
    ]
   },
   {
@@ -707,13 +707,13 @@
     "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), norm=norm_image)\n",
     "ax1.scatter([x for x, y in list(dao_findpeaks_match)], [y for x, y in list(dao_findpeaks_match)],\n",
     "            s=30, marker='s', lw=1,  facecolor='None', edgecolor='#EE7733',\n",
-    "            label='Found by DAO & find_peaks')\n",
+    "            label='Found by DAO and find_peaks')\n",
     "ax1.scatter([x for x, y in list(dao_iraf_match)], [y for x, y in list(dao_iraf_match)],\n",
     "            s=30, marker='D', lw=1, facecolor='None', edgecolor='#EE3377',\n",
-    "            label='Found by DAO & IRAF')\n",
+    "            label='Found by DAO and IRAF')\n",
     "ax1.scatter([x for x, y in list(iraf_findpeaks_match)], [y for x, y in list(iraf_findpeaks_match)],\n",
     "            s=30, marker='o', lw=1, facecolor='None', edgecolor='#0077BB',\n",
-    "            label='Found by IRAF & find_peaks')\n",
+    "            label='Found by IRAF and find_peaks')\n",
     "ax1.scatter([x for x, y in list(all_match)], [y for x, y in list(all_match)],\n",
     "            s=30, marker='o', lw=1.2, linestyle=':',facecolor='None', edgecolor='#BBBBBB',\n",
     "            label='Found by all methods')\n",
@@ -742,7 +742,7 @@
     "\n",
     "If none of the algorithms we've reviewed above do exactly what you need, `photutils` also provides infrastructure for you to generate and use your own source detection algorithm: the `StarFinderBase` object can be inherited and used to develop new star-finding classes. Take a look at the [documentation](https://photutils.readthedocs.io/en/latest/api/photutils.detection.StarFinderBase.html#photutils.detection.StarFinderBase) for more information.\n",
     "\n",
-    "If you do go that route, remember that `photutils` is open-developed; you would be very welcome to [open a pull request](https://github.com/astropy/photutils/blob/master/CONTRIBUTING.rst) and incorporate your new star finder into the `photutils` source code - for everyone to use!"
+    "If you do go that route, remember that `photutils` is open-developed; you would be very welcome to [open a pull request](https://github.com/astropy/photutils/blob/master/CONTRIBUTING.rst) and incorporate your new star finder into the `photutils` source code &ndash; for everyone to use!"
    ]
   },
   {
@@ -791,7 +791,7 @@
    "outputs": [],
    "source": [
     "from photutils import detect_sources\n",
-    "from photutils.utils import random_cmap"
+    "from photutils.utils import make_random_cmap"
    ]
   },
   {
@@ -827,7 +827,7 @@
     "ax1.set_title('Original Data')\n",
     "\n",
     "# Plot the segmentation image\n",
-    "rand_cmap = random_cmap(random_state=12345)\n",
+    "rand_cmap = make_random_cmap(random_state=12345)\n",
     "rand_cmap.set_under('black')\n",
     "segplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, segm), vmin=1, cmap=rand_cmap)\n",
     "ax2.set_xlabel('X (pixels)')\n",
@@ -981,7 +981,7 @@
     "\n",
     "# Plot the apertures\n",
     "for aperture in apertures:\n",
-    "    aperture.plot(color='red', lw=1, alpha=0.7, ax=ax1)\n",
+    "    aperture.plot(color='red', lw=1, alpha=0.7, axes=ax1)\n",
     "\n",
     "# Define the colorbar\n",
     "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
@@ -1013,7 +1013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is clear that using `photutils` for image segmentation can allow users to generate highly customized apertures - great for complex data that contain many different kinds of celestial sources."
+    "It is clear that using `photutils` for image segmentation can allow users to generate highly customized apertures &ndash; great for complex data that contain many different kinds of celestial sources."
    ]
   },
   {
@@ -1072,7 +1072,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
