--- a/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
+++ b/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
@@ -421,7 +421,7 @@
     "    position = (obj.xcentroid.value, obj.ycentroid.value)\n",
     "    a = obj.semimajor_axis_sigma.value * r\n",
     "    b = obj.semiminor_axis_sigma.value * r\n",
-    "    theta = obj.orientation.value\n",
+    "    theta = obj.orientation.to(u.rad).value\n",
     "    elliptical_apertures.append(EllipticalAperture(position, a, b, theta=theta))"
    ]
   },
@@ -439,7 +439,7 @@
     "\n",
     "# Plot the apertures\n",
     "for aperture in elliptical_apertures:\n",
-    "    aperture.plot(color='red', alpha=0.7, ax=ax1)\n",
+    "    aperture.plot(color='red', alpha=0.7, axes=ax1)\n",
     "\n",
     "# Define the colorbar\n",
     "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
@@ -473,7 +473,7 @@
     "\n",
     "At the moment, the positions of our apertures are in pixels, relative to our data array. However, if you need aperture positions in terms of celestial coordinates, `photutils` also includes aperture objects that can be integrated with Astropy's `SkyCoords`.\n",
     "\n",
-    "Fortunately this is extremely easy when we use the [World Coordinate System (WCS)](http://docs.astropy.org/en/stable/wcs/) to decipher a WCS object from the header of the FITS file containing our image, and then the `to_sky()` method to transform our `EllipticalAperture` objects into `SkyEllipticalAperture` objects. \n",
+    "Fortunately this is extremely easy when we use the [World Coordinate System (WCS)](http://docs.astropy.org/en/stable/wcs/) to decipher a WCS object from the header of the FITS file containing our image, and then use the `to_sky()` method to transform our `EllipticalAperture` objects into `SkyEllipticalAperture` objects. \n",
     "\n",
     "And, better yet, our `CCDData` object has held onto its WCS information ever since we created it!"
    ]
@@ -520,7 +520,7 @@
     "    theta = obj.orientation.value  * u.rad\n",
     "    \n",
     "    # Convert the theta from radians from X axis to the radians from North \n",
-    "    x_to_north_angle = (90. + header['ORIENTAT']) * u.deg\n",
+    "    x_to_north_angle = (90. + xdf_image.header['ORIENTAT']) * u.deg\n",
     "    x_to_north_angle_rad = x_to_north_angle.to_value(u.rad) * u.rad\n",
     "    theta -= x_to_north_angle_rad\n",
     "    \n",
@@ -550,20 +550,20 @@
    "source": [
     "Now that we have aperture objects that fit our data reasonably well, we can finally perform photometry with the `aperture_photometry` function. This function takes the following arguments:\n",
     "\n",
-    "* **`data`** - the background-subtracted data array on which to perform photometry.\n",
-    "* **`apertures`** - an aperture object containing the aperture(s) to use for the photometry.\n",
-    "* **`error`** (optional) - an array of values that represent the pixel-wise Gaussian 1-sigma errors of the input data.\n",
-    "* **`mask`** (optional) - a mask for the `data` to exclude certain pixels from calculations.\n",
-    "* **`method`** (optional) - how to place the aperture(s) onto the pixel grid (see below).\n",
-    "* **`unit`** (optional) - unit of `data` and `error`.\n",
-    "* **`wcs`** (optional) - the WCS transformation to use if `apertures` is a `SkyAperture` object. \n",
-    "* **`subpixels`** (optional) - the factor by which pixels are resampled (see below).\n",
+    "* **`data`** &ndash; the background-subtracted data array on which to perform photometry.\n",
+    "* **`apertures`** &ndash; an aperture object containing the aperture(s) to use for the photometry.\n",
+    "* **`error`** (optional) &ndash; an array of values that represent the pixel-wise Gaussian 1-sigma errors of the input data.\n",
+    "* **`mask`** (optional) &ndash; a mask for the `data` to exclude certain pixels from calculations.\n",
+    "* **`method`** (optional) &ndash; how to place the aperture(s) onto the pixel grid (see below).\n",
+    "* **`unit`** (optional) &ndash; unit of `data` and `error`.\n",
+    "* **`wcs`** (optional) &ndash; the WCS transformation to use if `apertures` is a `SkyAperture` object. \n",
+    "* **`subpixels`** (optional) &ndash; the factor by which pixels are resampled (see below).\n",
     "\n",
     "The following methods are the options for how to place apertures onto the data pixel grid:\n",
     "\n",
-    "* **exact** (default) - calculate the exact fractional overlap of each aperture for each overlapping pixel. This method is the most accurate, but will also take the longest. \n",
-    "* **center** - a pixel is either entirely in or entirely out of the aperture, depending on whether the pixel center is inside or outside of the aperture.\n",
-    "* **subpixel** - a pixel is divided into `subpixels` x `subpixels` subpixels, each of which are considered to be entirely in or out of the aperture depending on whether its center is in or out of the aperture. "
+    "* **exact** (default) &ndash; calculate the exact fractional overlap of each aperture for each overlapping pixel. This method is the most accurate, but will also take the longest. \n",
+    "* **center** &ndash; a pixel is either entirely in or entirely out of the aperture, depending on whether the pixel center is inside or outside of the aperture.\n",
+    "* **subpixel** &ndash; a pixel is divided into `subpixels` x `subpixels` subpixels, each of which are considered to be entirely in or out of the aperture depending on whether its center is in or out of the aperture. "
    ]
   },
   {
@@ -715,7 +715,7 @@
     "\n",
     "<h3>Exercise:</h3><br>\n",
     "\n",
-    "Re-calculate the photometry for these elliptical apertures - or just a subset of them - using the <code>subpixel</code> aperture placement method instead of the default <code>exact</code> method. How does this affect the count sum calculated for those apertures?\n",
+    "Re-calculate the photometry for these elliptical apertures &ndash; or just a subset of them &ndash; using the <code>subpixel</code> aperture placement method instead of the default <code>exact</code> method. How does this affect the count sum calculated for those apertures?\n",
     "\n",
     "</div>"
    ]
@@ -738,7 +738,7 @@
     "\n",
     "In the [background estimation notebook](../01_background_estimation/01_background_estimation.ipynb), we explored how to perform global background subtraction of image data with `photutils`. However, you can also use `photutils` to perform local background estimations for aperture corrections.\n",
     "\n",
-    "To estimate the local background for each aperture, measure the counts within annulus apertures around (but not including!) each source. In our example, we defined elliptical apertures with `r = 3` pixels to measure the counts within each source. To calculate the background for each source, let's measure the counts elliptical annuli between `r = 3.5` pixels and `r = 5` pixels."
+    "To estimate the local background for each aperture, measure the counts within annulus apertures around (but not including!) each source. Since our sources vary quite a bit in size, we should define apertures that are scaled by the size of the source. In our example, we defined elliptical apertures with `r = 3` pixels to measure the counts within each source. To calculate the background for each source, let's measure the counts elliptical annuli between `r = 3.5` pixels and `r = 5` pixels."
    ]
   },
   {
@@ -776,9 +776,9 @@
     "\n",
     "# Plot the apertures\n",
     "for aperture in elliptical_annuli:\n",
-    "    aperture.plot(color='red', alpha=0.4, ax=ax1, fill=True)\n",
+    "    aperture.plot(color='red', alpha=0.4, axes=ax1, fill=True)\n",
     "for aperture in elliptical_apertures:\n",
-    "    aperture.plot(color='white', alpha=0.7, ax=ax1)\n",
+    "    aperture.plot(color='white', alpha=0.7, axes=ax1)\n",
     "\n",
     "# Define the colorbar\n",
     "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
@@ -805,9 +805,9 @@
     "\n",
     "Now that our apertures have been defined, we can do photometry with them to estimate and account for the background. The aperture correction is calculated by:\n",
     "- Calculating the count rate within each annulus using `aperture_photometry`\n",
-    "- Dividing each annulus' count rate by each annulus' area to get the mean background value for each annulus\n",
+    "- Dividing the count rate of each annulus by the area of each annulus to get the mean background value for each annulus\n",
     "- Taking the mean of those annulus means to get a mean background value for the entire image\n",
-    "- Multiplying the global background mean value times the area of each elliptical photometric aperture, to get the estimated background count rate within each aperture\n",
+    "- Multiplying the global background mean value by the area of each elliptical photometric aperture, to get the estimated background count rate within each aperture\n",
     "- Subtracting the estimated background count rate from the photometric count rate for each aperture\n",
     "\n",
     "(Just like when we did photometry with the elliptical apertures above, the below step will take almost 5 minutes.)"
@@ -846,7 +846,7 @@
    "outputs": [],
    "source": [
     "# Calculate the mean background level (per pixel) in the annuli \n",
-    "bkg_area = [annulus.area() for annulus in elliptical_annuli]\n",
+    "bkg_area = [annulus.area for annulus in elliptical_annuli]\n",
     "bkg_mean_per_aperture = bkg_phot_table['aperture_sum'].value / bkg_area\n",
     "bkg_mean = np.average(bkg_mean_per_aperture) * (u.electron / u.s)\n",
     "print('Background mean:', bkg_mean)\n",
@@ -865,7 +865,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You might have noticed that these background count rates are *really* small. In this case, this is to be expected - since our example XDF data is a high-level science product (HLSP) that already has already been background-subtracted."
+    "You might have noticed that these background count rates are *really* small. In this case, this is to be expected &ndash; since our example XDF data is a high-level science product (HLSP) that already has already been background-subtracted."
    ]
   },
   {
@@ -933,7 +933,7 @@
    "source": [
     "---\n",
     "## About this Notebook\n",
-    "**Authors:** Lauren Chambers (lchambers@stsci.edu), Erik Tollerud (etollerud@stsci.edu), Tom Wilson (towilson@stsci.edu) Clare Shanahan (cshanahan@stsci.edu)\n",
+    "**Authors:** Lauren Chambers (lchambers@stsci.edu), Erik Tollerud (etollerud@stsci.edu), Tom Wilson (towilson@stsci.edu), Clare Shanahan (cshanahan@stsci.edu)\n",
     "<br>**Updated:** May 2019"
    ]
   },
@@ -962,7 +962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
