Eliminate warning from CCDData by removing unnecessary wcs argument
(cherry picked from commit 916b99803c4259dd25fc9a58b93cfe4b3b73901c)

--- a/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
+++ b/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
@@ -610,7 +610,7 @@
    "outputs": [],
    "source": [
     "# The CCDData mask will be automatically applied\n",
-    "sky_phot_datum = aperture_photometry(xdf_image, sky_elliptical_apertures[0], wcs=wcs)\n",
+    "sky_phot_datum = aperture_photometry(xdf_image, sky_elliptical_apertures[0])\n",
     "sky_phot_datum"
    ]
   },
