Fix another angle unit
(cherry picked from commit b686565ba6bc8e7d387b31202e29fc8208ef7a4a)

--- a/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
+++ b/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
@@ -757,7 +757,7 @@
     "    a_in = obj.semimajor_axis_sigma.value * r_in\n",
     "    a_out = obj.semimajor_axis_sigma.value * r_out\n",
     "    b_out = obj.semiminor_axis_sigma.value * r_out\n",
-    "    theta = obj.orientation.value\n",
+    "    theta = obj.orientation.to(u.rad).value\n",
     "    elliptical_annuli.append(EllipticalAnnulus(position, a_in, a_out, b_out, theta=theta))"
    ]
   },
