Rewrite description of the radii in defining elliptical apertures
(cherry picked from commit c0d60bc9958f77faef5bdef4581b65d08c2e0dbd)

--- a/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
+++ b/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
@@ -408,19 +408,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining apertures for sources of different sizes\n",
+    "\n",
+    "The galaxies in this HST image vary widely in size, from a few hundred pixels across to a few dozen pixels. Two of the \n",
+    "properties calculated by `source_properties` are the 1-$\\sigma$ standard deviations of a 2D Gaussian fit to each \n",
+    "source. Those deviations are called the `semimajor_axis_sigma` and the `semiminor_axis_sigma`. \n",
+    "\n",
+    "In what follows the elliptical aperture for each source will be a fixed multiple of that source's \n",
+    "`semimajor_axis_sigma` and `semiminor_axis_sigma`. The multiplier will be denoted by the variable `r` and we use a \n",
+    "value of `3` in most cases below. The multiplier value of 3 was chosen here because it is the approximate isphotal \n",
+    "extent of the galaxy.\n",
+    "\n",
+    "There are several accepted ways of perfforming preciion photometry on galaxies. Though this notebook illustrates one \n",
+    "way to do it you should make sure that the method you use is appropriate for the science you are doing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = 3.  # pixels; approximate isophotal extent of semimajor axis\n",
+    "r = 3.  # Multiplier of semimajor and semiminor axes of source\n",
     "\n",
     "# Create the apertures\n",
     "elliptical_apertures = []\n",
     "for obj in catalog:\n",
     "    position = (obj.xcentroid.value, obj.ycentroid.value)\n",
-    "    a = obj.semimajor_axis_sigma.value * r\n",
-    "    b = obj.semiminor_axis_sigma.value * r\n",
+    "    a = obj.semimajor_axis_sigma.value * r  # pixel\n",
+    "    b = obj.semiminor_axis_sigma.value * r  # pixel\n",
     "    theta = obj.orientation.to(u.rad).value\n",
     "    elliptical_apertures.append(EllipticalAperture(position, a, b, theta=theta))"
    ]
@@ -462,7 +481,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clearly, these custom-made elliptical apertures fit our XDF galaxies much better than the one-size-fits-all circular apertures from before."
+    "Clearly, these custom-made elliptical apertures fit our XDF galaxies much better than the one-size-fits-all circular \n",
+    "apertures from before. It is also clear that our apertures do not quite enclose all of the light from each galaxy."
    ]
   },
   {
@@ -621,8 +641,8 @@
     "Woohoo!\n",
     "\n",
     "Unfortunately for our purposes, the `aperture_photometry` function can be only used alone for one of the two cases:\n",
-    "* Identical apertures at distinct positions (e.g. circular apertures with `r = 3` pixels for many sources)\n",
-    "* Distinct apertures at identical positions (e.g. two circular apertures with `r = 3` pixels and `r = 5` pixels for one source)\n",
+    "* Identical apertures at distinct positions (e.g. circular apertures with radius of 3 pixels for many sources)\n",
+    "* Distinct apertures at identical positions (e.g. two circular apertures with radius of 3 pixels and radius of 5 pixels for one source)\n",
     "\n",
     "Since our elliptical apertures are distinct apertures at distinct positions, we need to do a little more work to get a single table of photometric values.\n",
     "\n",
@@ -738,7 +758,17 @@
     "\n",
     "In the [background estimation notebook](../01_background_estimation/01_background_estimation.ipynb), we explored how to perform global background subtraction of image data with `photutils`. However, you can also use `photutils` to perform local background estimations for aperture corrections.\n",
     "\n",
-    "To estimate the local background for each aperture, measure the counts within annulus apertures around (but not including!) each source. Since our sources vary quite a bit in size, we should define apertures that are scaled by the size of the source. In our example, we defined elliptical apertures with `r = 3` pixels to measure the counts within each source. To calculate the background for each source, let's measure the counts elliptical annuli between `r = 3.5` pixels and `r = 5` pixels."
+    "To estimate the local background for each aperture, measure the counts within annulus apertures around (but not including!) each source. Since our sources vary quite a bit in size, we should define apertures that are scaled by the size of the source. \n",
+    "\n",
+    "As we did above, the radii defining the annulus are calculated from the 1D standard deviations of a 2D Gaussian fit to \n",
+    "source. Above, we used a multiplier of 3 to calculate the axes of the elliptical aperture. \n",
+    "\n",
+    "Here we need to construct an annulus around each source to meach the local background. The inner diameter should be \n",
+    "large enough that it does not include much light from the galaxy on which photometry is being performed. The outer \n",
+    "diameter should be sufficiently large that there are many pixels in the annulus. \n",
+    "\n",
+    "Below, we set the multiplier for the inner annulus radius to be one more than the aperture multiplier, and the outer \n",
+    "radius to be 1.5 larer than the inner radius."
    ]
   },
   {
@@ -747,8 +777,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r_in = 3.5  # approximate isophotal extent of inner semimajor axis\n",
-    "r_out = 5.  # approximate isophotal extent of inner semimajor axis\n",
+    "r_in = r + 1  # approximate isophotal extent of inner semimajor axis\n",
+    "r_out = r_in + 1.5  # approximate isophotal extent of inner semimajor axis\n",
     "\n",
     "# Create the apertures\n",
     "elliptical_annuli = []\n",
@@ -795,6 +825,15 @@
     "# Crop to show an inset of the data\n",
     "ax1.set_xlim(2000, 3000)\n",
     "ax1.set_ylim(2000, 1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that in this approach the annulus of each galaxy is \"scaled\" to the size of the galaxy. That in turn means that \n",
+    "the number of pixels in the background annulus differs from galaxy to galaxy. The area of each annulus by photutils \n",
+    "and the annulus radii increased if needed."
    ]
   },
   {
