copy edit ccd notebook 01-11

--- a/notebooks/01-11-reading-images.ipynb
+++ b/notebooks/01-11-reading-images.ipynb
@@ -33,7 +33,7 @@
     "both to store the fake images we generate and to read images. In normal use, you\n",
     "wouldn't start by writing images there, however.\n",
     "\n",
-    "If the images are in the same directory as the notebook you can omit this, or\n",
+    "If the images are in the same directory as the notebook, you can omit this or\n",
     "set it to an empty string `''`. Having images in the same directory as the\n",
     "notebook is less complicated, but it's not at all uncommon to need to work with\n",
     "images in a different directory.\n",
@@ -306,7 +306,7 @@
    "source": [
     "### Filtering and iterating over images\n",
     "\n",
-    "The convenient thing about `ImageFileCollection` is that it provides easy ways\n",
+    "The great thing about `ImageFileCollection` is that it provides convenient ways\n",
     "to filter or loop over files via FITS header keyword values.\n",
     "\n",
     "For example, looping over just the flat files is one line of code:"
