copy edit ccd notebook 02-00

--- a/notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction.ipynb
+++ b/notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "The bias in a CCD camera is a DC offset applied to all pixels so that when the\n",
-    "voltage in each pixel is converted to a number the number will always be\n",
+    "voltage in each pixel is converted to a number, the number will always be\n",
     "positive. In an ideal CCD the bias would be the same for every pixel and not\n",
     "change over time. In practice, the bias is slightly different for each pixel,\n",
     "and can vary by a count or two from night to night or during a night.\n",
@@ -129,7 +129,7 @@
     "+ There is noticeable \"static\" in the images; that is read noise.\n",
     "+ None of the variations are particularly large.\n",
     "+ Combining several bias images vastly reduces the read noise. This example is a\n",
-    "little unrealistic in that 100 bias images were combined but does illustrate the\n",
+    "little unrealistic in that 100 bias images were combined, but it still illustrates the\n",
     "idea that combining images reduces noise."
    ]
   },
@@ -143,7 +143,7 @@
     "taking and combining several calibration images is to reduce the noise if the\n",
     "images are used for calibration. The difference between a single image and a\n",
     "combination of images is apparent in the images above. Another way to see the\n",
-    "impact of combining images in the histogram of pixel values. Notice that the\n",
+    "impact of combining images is in the histogram of pixel values. Notice that the\n",
     "distribution of values is much narrower for the combined image than for a single\n",
     "bias. Pixels near the edges, where the amplifier glow is large, are binned\n",
     "separately from the rest of the pixels to emphasize the uniformity of the chip\n",
