copy edit ccd notebook 02-04

--- a/notebooks/02-04-Combine-bias-images-to-make-master.ipynb
+++ b/notebooks/02-04-Combine-bias-images-to-make-master.ipynb
@@ -17,7 +17,7 @@
     "subtracted.\n",
     "\n",
     "Regardless of which path you took through the calibration of the biases (with\n",
-    "overscan or without) there should be a folder named `reduced` that contains the\n",
+    "overscan or without), there should be a folder named `reduced` that contains the\n",
     "calibrated bias images. If there is not, please run the previous notebook before\n",
     "continuing with this one."
    ]
@@ -66,11 +66,11 @@
     "+ An object-oriented interface built around the `Combiner` object, described in\n",
     "the [ccdproc documentation on image combination]().\n",
     "+ A function called `combine`, which we will use here because the function\n",
-    "allows one to specify the maximum amount of memory that should be used during\n",
-    "combination. That feature can be essential depending on how many images you need\n",
+    "allows you to specify the maximum amount of memory that should be used during\n",
+    "combination. This feature can be essential depending on how many images you need\n",
     "to combine, how big they are, and how much memory your computer has.\n",
     "\n",
-    "*NOTE: If using a version of ccdproc lower than 2.0 set the memory limit a\n",
+    "*NOTE: If using a version of ccdproc lower than 2.0, set the memory limit a\n",
     "factor of 2-3 lower than you want the maximum memory consumption to be.*"
    ]
   },
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 1: cryogenically-cooled camera"
+    "## Example 1: Cryogenically-cooled camera"
    ]
   },
   {
