--- a/notebooks/03-00-Dark-current-and-hot-pixels.ipynb
+++ b/notebooks/03-00-Dark-current-and-hot-pixels.ipynb
@@ -15,7 +15,7 @@
     "caused by thermal effects in the CCD.\n",
     "The dark current in modern CCDs is extremely small if the camera is cooled in\n",
     "some way. Cameras cooled with liquid nitrogen have nearly zero dark current\n",
-    "while thermo-electrically cooled CCDs have a somewhat larger dark current. The\n",
+    "while thermoelectrically-cooled CCDs have a somewhat larger dark current. The\n",
     "dark current in a CCD operating at room temperature will typically be very\n",
     "large.\n",
     "\n",
