copy edit ccd notebook 03-01

--- a/notebooks/03-01-Dark-current-The-ideal-case.ipynb
+++ b/notebooks/03-01-Dark-current-The-ideal-case.ipynb
@@ -40,13 +40,13 @@
     "\n",
     "Recall that *dark current* refers to counts (electrons) generated in a pixel\n",
     "because an electron in the pixel happens to have enough energy to \"break free\"\n",
-    "and register as a count. The distribution of electron thermal energies in  pixel\n",
+    "and register as a count. The distribution of electron thermal energies in a pixel\n",
     "follows a [Maxwell-Boltzmann distribution](https://en.wikipedia.org/wiki/Maxwell%E2%80%93Boltzmann_distribution) in which most electrons have energy\n",
     "around $kT$, where $T$ is the temperature of the sensor and $k$ is the Boltzmann\n",
     "constant. There is a distribution of energies, though, and occasionally an\n",
-    "electron will be high enough energy to jump to the conducting band in the chip,\n",
+    "electron will be high energy enough to jump to the conducting band in the chip,\n",
     "registering the same as an electron excited by a photon. Since the\n",
-    "Maxwell-Boltzmann distribution depends on temperature the rate at which dark\n",
+    "Maxwell-Boltzmann distribution depends on temperature, the rate at which dark\n",
     "current appears in a pixel is also expected to depend on temperature.\n",
     "\n",
     "A *dark frame* (also called a *dark image*) is an image taken with your camera\n",
@@ -106,12 +106,12 @@
    "source": [
     "**A function to plot the distribution of dark counts**\n",
     "\n",
-    "The function below plots the"
+    "The function below plots the:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
     "        expected standard deviation of the Gaussian.\n",
     "        \n",
     "    exposure : float\n",
-    "        Exosure time, in seconds.\n",
+    "        Exposure time, in seconds.\n",
     "        \n",
     "    gain : float, optional\n",
     "        Gain of the camera, in electron/ADU.\n",
@@ -209,12 +209,12 @@
     "$$\n",
     "\n",
     "For liquid-cooled cameras, particularly ones cooled by liquid nitrogen, the\n",
-    "operating temperature doesn't change. For thermo-electrically cooled cameras one\n",
-    "is able to set the desired operating temperature. As a result, you should be\n",
+    "operating temperature doesn't change. For thermoelectrically-cooled cameras you are\n",
+    "able to set the desired operating temperature. As a result, you should be\n",
     "able to ignore the temperature dependence of the dark current.\n",
     "\n",
-    "The thermo-electric coolers can usually cool by some fixed amount below the\n",
-    "ambient temperature. Though in principle one could choose to always cool by the\n",
+    "The thermoelectric coolers can usually cool by some fixed amount below the\n",
+    "ambient temperature. Though in principle you could choose to always cool by the\n",
     "same fixed amount, like $50^\\circ$C below the ambient temperature, there is an\n",
     "advantage to always running your camera at the same temperature: dark frames\n",
     "taken on one date are potentially useful on another date. If the operating\n",
@@ -222,8 +222,8 @@
     "observe unless you carefully characterize the temperature dependence of your\n",
     "dark current.\n",
     "\n",
-    "It will turn out that for practical reasons -- not all pixels in your camera\n",
-    "have the same dark current -- it is usually best to take dark frames every time\n",
+    "It will turn out that for practical reasons — not all pixels in your camera\n",
+    "have the same dark current — it is usually best to take dark frames every time\n",
     "you observe anyway."
    ]
   },
@@ -234,7 +234,7 @@
     "## Illustration with dark current only\n",
     "\n",
     "For the purposes of illustrating some of the properties of dark current and dark\n",
-    "frames we'll generate some simulated images in which the counts are due to dark\n",
+    "frames, we'll generate some simulated images in which the counts are due to dark\n",
     "current alone. We'll use these values:\n",
     "\n",
     "+ Dark current is $d_c(T) = 0.1 e^-$/pixel/sec\n",
@@ -265,7 +265,7 @@
     "Note that the counts vary from image to image but that the average is very close\n",
     "to the expected value.\n",
     "\n",
-    "The expected value of the dark counts for this image are $d_e(t)/g =\n",
+    "The expected value of the dark counts for this image is $d_e(t)/g =\n",
     "6.67~$counts."
    ]
   },
@@ -319,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dark counts follows a Poisson distribution\n",
+    "### Dark counts follow a Poisson distribution\n",
     "\n",
     "The distribution below shows a normalized histogram of number of pixels as a\n",
     "function of dark counts in each pixel for one of the simulated dark frames.\n",
@@ -454,13 +454,13 @@
    "metadata": {},
    "source": [
     "The plots below show the result of averaging several (20 in this case) dark\n",
-    "frames together. One might hope that averaging reduces the noise enough that the\n",
+    "frames together. We might hope that averaging reduces the noise enough that the\n",
     "distribution of pixels becomes the Poisson distribution expected for a dark\n",
     "frame. It does not.\n",
     "\n",
     "*Note:* To correctly calculate the expected distribution of counts in the\n",
-    "average of the dark frames one should start with the expectations for the *sum*\n",
-    "of the images, them scale counts down by the number of images and the\n",
+    "average of the dark frames you should start with the expectations for the *sum*\n",
+    "of the images, then scale counts down by the number of images and the\n",
     "distribution up by the same factor so that the distribution remains normalized."
    ]
   },
@@ -496,8 +496,8 @@
     "In this case the read noise is 1 $e^-$, lower by a factor of ten than the\n",
     "expected dark current for this exposure time, 10$e^-$.\n",
     "\n",
-    "This case almost never occurs in real CCDs but it illustrates that with a low\n",
-    "enough read noise one can recover the Poisson distribution of the dark current."
+    "This case almost never occurs in real CCDs, but it illustrates that with a low\n",
+    "enough read noise you can recover the Poisson distribution of the dark current."
    ]
   },
   {
